# fin-ai-ops

./: .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
agents/: __init__.py  alert_agent.py  cost_monitor.py  health_agent.py  reconciliation_agent.py  report_agent.py  tagging_health_agent.py
config/: .env.example  hub_config.yaml.example
core/: __init__.py  agent_observer.py  agent_supervisor.py  agent_trace.py  alert_store.py  alerts.py  approvals.py  audit.py  circuit_breaker.py  cli.py  config.py  event_store.py  filters.py  lifecycle.py  logging_config.py  memory_audit.py  models.py  notifications.py  policies.py  pricing.py  retry.py  tagging.py  thresholds.py  tool_governor.py  validation.py
docs/: GETTING_STARTED.md  TROUBLESHOOTING.md
mcp_server/: __init__.py  server.py
policies/: ai-ml-training.json  anomaly-response-sla.json  carbon-aware-placement.json  commitment-coverage.json  data-transfer.json  database-governance.json  default-tagging-policy.json  dev-env-cost-cap.json  gpu-instance-policy.json  high-cost-approval.json  k8s-nodepool.json  multi-account-budget.json  scheduled-auto-shutdown.json  spot-preemptible-mandate.json  storage-lifecycle.json  unit-economics.json
providers/: __init__.py  base.py
scripts/: drift_check.py  governor_dry_run.py  preflight_check.py  repo_health.py  validate_policies.py
tests/: helpers.py  test_agent_observer.py  test_agent_supervisor.py  test_agent_trace.py  test_agent_trace_adapters.py  test_agent_trace_otel.py  test_alerts.py  test_approvals.py  test_audit.py  test_audit_hardening.py  test_aws_bedrock_agent.py  test_circuit_breaker.py  test_config.py  test_cost_analyzers.py  test_cost_monitor.py  test_event_store.py  test_filters.py  test_gcp_adk_agent.py  test_governance_mcp_tools.py  test_health_agent.py  (+23 more)
(+85 files in other folders)
